[metadata]
name = egraph
summary = Electricity usage Dashboard
description-file =
    README.rst
author = Masayuki Igawa
author-email = masayuki@igawa.io
home-page = https://igawa.io
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    egraph

[entry_points]
console_scripts =
    egraph-api = egraph.app:main

wsgi_scripts =
    egraph-api = egraph.app:get_app

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
